--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,4 +1,6 @@
-.leftNav{
-	height:100vh;
-	background:url(../../assets/images/darkBlue_bg.jpg);
+.el-menu--horizontal{
+	border-bottom:none!important;
+}
+.header{
+	background-color:#545C64;
 }
